--- a/app.json
+++ b/app.json
@@ -28,7 +28,10 @@
       "eas": {
         "projectId": "d47a69d3-f9f4-4ef6-9c5e-3554de21b529"
       }
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   },
   "react-native-google-mobile-ads": {
     "android_app_id": "ca-app-pub-2248591272648689~5445910867"
