--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-google-mobile-ads": "^13.6.0",
-    "expo-dev-client": "~4.0.16"
+    "expo-dev-client": "~4.0.16",
+    "expo-font": "~12.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
